[tool.poetry]
name = "telefuse"
version = "0.1.0"
description = ""
authors = ["ArtoLord <artgoi111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.8.2"
Pyrogram = "^1.2.9"
TgCrypto = "^1.2.2"
fs = "^2.4.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
